# outlines

./: 404.html  README.md  another_wp_install.md  c_programming.md  crm_data_model.md  engelbart_hlamt_1962.md  icestick_setup.md  index.html  infopages.md  iptables.md  javascript_notes.md  learning_methods.md  licensing_rules.md  macbook_air_setup.md  manpages.md  osx_disable_sip.md  pcb-etching.md  pycon2016_django_docdrivendev.md  pycon2016_grinberg_flaskprod.md  pycon2016_typeannotations.md  pyproject.toml  python-reference.md  raspi_home_setup.md  react-basic.md  requirements.txt  scansf.md  security_resources.md  site_asset_checklist.md  site_launch_checklist.md  sitemap.xml  spelunking_sqlite3.md  squarespace_patterns.md  threat_model_test_cases.md  tricks_gnu_bash.md  vim_tricks.md  wordpress_backup_restore.md  wp_backup.md  wp_backup_migrate.md
digests/: ansible-semanticmediawiki-install-notes.md  artofwar13_spies.md  becoming_a_magician.md  compilers-ch1-the-dragon-book.md  cracking_creativity_michalko.md  how-to-get-your-point-across-30sec.md  intro_to_grant_proposal_writing_foundation_ctr.md  learning-how-to-learn-coursera.md  meditations_Marcus_Aurelius.md  spiral-dynamics-integral-audiobook.md
docs/: README.md
events/: ReactSFMeetup_20161013_Animation.md  ReactSFmeetup_PublishYourComponents.md  SFPython_Import_Madness_20170614.md  SFPython_Unit_Testing_With_Mock_20170614.md  SFPython_unicode_20170614.md  elastic-search-talk-071415.txt  littlefish_ian_gotts_20170210.md  pyclass_vector_packing_20161114.md  pycon2016_lasercutter_3dprinter_python.md  (+2 more)
(+398 files in other folders)
